Appointment Dao Hibernate Migration